syntax = "proto3";
package hwp;

message WorkerRegistration {
  string worker_id = 1;
  repeated string capabilities = 2;
}

message WorkerStatus {
  string worker_id = 1;
  string state = 2;
  repeated string current_jobs = 3;
  int64 last_heartbeat = 4;
}

message ResourceQuota {
  uint64 cpu_m = 1;
  uint64 memory_mb = 2;
  uint32 gpu = 3;
}

message JobSpec {
  string name = 1;
  string image = 2;
  repeated string command = 3;
  ResourceQuota resources = 4;
  uint64 timeout_ms = 5;
  uint32 retries = 6;
  map<string, string> env = 7;
  repeated string secret_refs = 8;
}

message AssignJobRequest {
  string worker_id = 1;
  string job_id = 2;
  JobSpec job_spec = 3;
}

message GetWorkerStatusRequest {
  string worker_id = 1;
}

message HeartbeatRequest {
  string worker_id = 1;
  int64 timestamp = 2;
  ResourceUsage resource_usage = 3;
}

message ResourceUsage {
  uint64 cpu_usage_m = 1;
  uint64 memory_usage_mb = 2;
  uint32 active_jobs = 3;
}

message JobAccepted {
  string job_id = 1;
}

message JobResult {
  string job_id = 1;
  int32 exit_code = 2;
  string stdout = 3;
  string stderr = 4;
}

message LogEntry {
  string job_id = 1;
  string data = 2;
}

message CancelJobRequest {
  string worker_id = 1;
  string job_id = 2;
}

message Empty {
  // Empty message for gRPC responses
}

// Message from agent to server in bidirectional stream
message AgentMessage {
  oneof payload {
    JobAccepted job_accepted = 1;
    LogEntry log_entry = 2;
    JobResult job_result = 3;
  }
}

// Message from server to agent in bidirectional stream
message ServerMessage {
  oneof payload {
    AssignJobRequest assign_job = 1;
    CancelJobRequest cancel_job = 2;
  }
}

service WorkerService {
  // Register a worker with the server
  rpc RegisterWorker(WorkerRegistration) returns (WorkerStatus);

  // Original unary job assignment (for simple cases)
  rpc AssignJob(AssignJobRequest) returns (JobAccepted);

  // Get current worker status
  rpc GetWorkerStatus(GetWorkerStatusRequest) returns (WorkerStatus);

  // Send heartbeat with resource usage
  rpc Heartbeat(HeartbeatRequest) returns (Empty);

  // Client streaming for logs
  rpc StreamLogs(stream LogEntry) returns (Empty);

  // Cancel a running job
  rpc CancelJob(CancelJobRequest) returns (Empty);

  // Bidirectional streaming for real-time job execution
  // Server sends job assignments, client sends logs and results
  rpc JobStream(stream AgentMessage) returns (stream ServerMessage);
}
